[package]
name = "wx" # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["KENZ.gelsoft@gmail.com"]

build = "build.rs"

[dependencies] 
libc = "0.1.*"

[build-dependencies]
gcc = "0.3.*"
bindgen = { git = "https://github.com/crabtw/rust-bindgen.git", rev="bfcc9e16fa3385c4c243beda61a683eb812d19df" }

